<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/dp_20"
    android:background="@drawable/ripple">

    <ImageView
        android:id="@+id/imgCoffee"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:src="@drawable/ic_coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/txt3"
        app:layout_constraintTop_toBottomOf="@id/imgCoffee" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLink"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/LinkProduct"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnLoad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dp_15"
        android:backgroundTint="@color/orangeApp"
        android:layout_marginStart="@dimen/dp_5"
        android:text="@string/Load"
        app:cornerRadius="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="@+id/txt1"
        app:layout_constraintEnd_toEndOf="@+id/txt3"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imgCoffee" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/txt3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt1" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NameProduct"
            android:inputType="text"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="@+id/txt3"
        app:layout_constraintStart_toStartOf="@+id/txt3"
        app:layout_constraintTop_toBottomOf="@id/txt3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PriceProduct"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        android:backgroundTint="@color/red"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/Cancel"
        app:cornerRadius="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/txt2"
        app:layout_constraintTop_toBottomOf="@id/txt2" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:backgroundTint="@color/orangeApp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/Add"
        app:cornerRadius="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="@+id/txt2"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/btnCancel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="@dimen/dp_10"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/dp_10"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="@dimen/dp_10"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/dp_10"
        app:layout_constraintGuide_percent="0.7" />


</androidx.constraintlayout.widget.ConstraintLayout>